tests/syntax/bad_numeral.m31.ref
File "./syntax/bad_numeral.m31", line 1, characters 11-29:
Parsing error: bad numeral 4611686018427387904
