tests/syntax/bad_numeral.m31
verbosity 4611686018427387904
